tests/NormalTests/paczka1/small_fuzzy/94247430.err
Error in line 1: 97TyUbWt S462 82,5
Error in line 3: ql8YeoZy A396 32,8
Error in line 6: ql8YeoZy S462 89,6
Error in line 9: q7Da1BFzNi S462 41,4
Error in line 8: wvZ5onhUFh S462 99,5
